# PlantCtrl

./: .gitignore  README.md
board/: .gitignore  4435.kicad_mod  CN3306.kicad_sym  CN3795.kicad_sym  JLCPCB SMT Parts Library(20201125).ods  PlantCtrlESP32.erc  PlantCtrlESP32.kicad_pcb  PlantCtrlESP32.kicad_pcb.orig  PlantCtrlESP32.kicad_prl  PlantCtrlESP32.kicad_pro  PlantCtrlESP32.kicad_sch  PlantCtrlESP32.kicad_sch-bak  PlantCtrlESP32.pro  PlantCtrlESP32.round-tracks-config  PlantCtrlESP32.sch  PlantCtrlESP32.sch-bak  PlantCtrlESP32_Board0_7.ods  R_Shunt_Vishay_WSK2512_6332Metric_T1.19mm.kicad_mod  ReadMe.md  cn3722.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table  ~PlantCtrlESP32.kicad_sch.lck
board/bom/: ibom.html
board/gerber/: .gitignore  PlantCtrlESP32-B_Adhes.gbr  PlantCtrlESP32-B_CrtYd.gbr  PlantCtrlESP32-B_Cu.gbr  PlantCtrlESP32-B_Fab.gbr  PlantCtrlESP32-B_Mask.gbr  PlantCtrlESP32-B_Paste.gbr  PlantCtrlESP32-B_SilkS.gbr  PlantCtrlESP32-Cmts_User.gbr  PlantCtrlESP32-Dwgs_User.gbr  PlantCtrlESP32-Eco1_User.gbr  PlantCtrlESP32-Eco2_User.gbr  PlantCtrlESP32-Edge_Cuts.gbr  PlantCtrlESP32-F_Adhes.gbr  PlantCtrlESP32-F_CrtYd.gbr  PlantCtrlESP32-F_Cu.gbr  PlantCtrlESP32-F_Fab.gbr  PlantCtrlESP32-F_Mask.gbr  PlantCtrlESP32-F_Paste.gbr  PlantCtrlESP32-F_SilkS.gbr  PlantCtrlESP32-Margin.gbr  PlantCtrlESP32-NPTH.drl  PlantCtrlESP32-PTH.drl  PlantCtrlESP32-drl_map.dxf  ReadMe.md  generatePCB.sh
board/gerber-0.4/: PlantCtrlESP32-B_Adhes.gbr  PlantCtrlESP32-B_CrtYd.gbr  PlantCtrlESP32-B_Cu.gbr  PlantCtrlESP32-B_Fab.gbr  PlantCtrlESP32-B_Mask.gbr  PlantCtrlESP32-B_Paste.gbr  PlantCtrlESP32-B_SilkS.gbr  PlantCtrlESP32-Cmts_User.gbr  PlantCtrlESP32-Dwgs_User.gbr  PlantCtrlESP32-Eco1_User.gbr  PlantCtrlESP32-Eco2_User.gbr  PlantCtrlESP32-Edge_Cuts.gbr  PlantCtrlESP32-F_Adhes.gbr  PlantCtrlESP32-F_CrtYd.gbr  PlantCtrlESP32-F_Cu.gbr  PlantCtrlESP32-F_Fab.gbr  PlantCtrlESP32-F_Mask.gbr  PlantCtrlESP32-F_Paste.gbr  PlantCtrlESP32-F_SilkS.gbr  PlantCtrlESP32-Margin.gbr  PlantCtrlESP32-NPTH.drl  PlantCtrlESP32-PTH.drl
board/kicad-stuff/: BQ34Z100PWR-G1.kicad_sym  DW01.dcm  DW01.kicad_sym  DW01.lib  ESP32-DEVKITC-32D.lib  LP38690DT-3.3.kicad_sym  LP38690DT-3.3.lib  SOP65P640X120-14N.kicad_mod  SSOP10.kicad_mod  SX1308.kicad_sym  SX1308.lib  ds2438.kicad_sym  ds2438.lib
board/kicad-stuff/ESP32/: ESP32-DEVKITC-32D.kicad_sym
esp32/: .gitignore  Doxyfile  PlantControl.code-workspace  Readme.md  custom_platformio.ini.example  defaultWithSmallerSpiffs.csv  generatePCB.sh  platformio.ini  staticCodeAnalysis.cppcheck
esp32/data/: index.htm
esp32/host/: Readme.md  config-example.json  settings.json.example  upload-settings.sh  upload-via-mqtt.sh  upload.sh  uploadInitialSettings.sh
esp32/include/: ControllerConfiguration.h  DS18B20.h  DS2438.h  FileUtils.h  HomieConfiguration.h  HomieTypes.h  LogDefines.h  MQTTUtils.h  MathUtils.h  PlantCtrl.h  RunningMedian.h  TimeUtils.h  WakeReason.h  ulp-pwm.h
esp32/src/: DS18B20.cpp  DS2438.cpp  FileUtils.cpp  MQTTUtils.cpp  MathUtil.cpp  PlantCtrl.cpp  RunningMedian.cpp  TimeUtils.cpp  main.cpp
esp32test/Esp32DeepSleepTest/: PlantControlTest.code-workspace  platformio.ini
extender/extender/: extender.kicad_prl  extender.kicad_pro  extender.kicad_sch
hardware/: verguss form sensor v1.stl
plant-ctrl2/src/: main.rs
plantctrl-extension/: plantctrl-extension.kicad_pcb  plantctrl-extension.kicad_prl  plantctrl-extension.kicad_pro  plantctrl-extension.kicad_sch
rust/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults  setup.txt
rust/.cargo/: config.toml
rust/src/: bq34z100.rs  config.rs  lib.rs  main.rs  plant_hal.rs  second.rs  sipo.rs
rust/src/webserver/: config.html  form.js  initial_config.html  ota.js  webserver.rs  wifi.js
rust/src_webpack/: package-lock.json  package.json  tsconfig.json  webpack.config.js
rust/src_webpack/src/: form.ts  ota.ts  wifi.ts
(+11 files in other folders)
