[package]
name = "plant-ctrl2"
version = "0.1.0"
authors = ["Empire Phoenix"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"
strip = true
lto = "fat"
codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"
lto = "fat"
codegen-units = 1

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
serde = { version = "1.0.192",  features = ["derive"] }
minimq = "0.8.0"
average = { version = "0.14.1" , features = ["std"] }
esp32 = "0.27.0"
bit_field = "0.10.2"
ds18b20 = "0.1.1"
embedded-svc = { version = "0.26.4", features = ["experimental"] }
esp-idf-hal = "0.42.5"
esp-idf-sys = { version = "0.33.7", features = ["binstart", "native"] }
esp-ota = "0.2.0"
esp_idf_build = "0.1.3"
datetime = "0.5.2"
build-time = "0.1.2"
chrono = { version = "0.4.23", default-features = false , features = ["iana-time-zone"] }
chrono-tz = "0.8.0"
paste = "1.0.14"
embedded-hal = "0.2.7"
dummy-pin = "0.1.1"
shift-register-driver = "0.1.1"
one-wire-bus = "0.1.1"
#?bq34z100 required



[build-dependencies]
embuild = "0.31.3"
